Ajout présentation amelia

--- a/index.html
+++ b/index.html
@@ -126,7 +126,18 @@
                 </div>
             </div>
         </nav>
-        <div class="jumbotron"></div> <!-- Emplacement pour le contenu principal de la page -->
+        <div class="jumbotron">
+            <div class="media">
+                <img src="images/AmeliaPilou.jpg" class="align-self-center mr-3" alt="...">
+                <div class="media-body">
+                    <h5 class="mt-0">Bonjour et bienvenu sur mon portfolio !</h5>
+                    <p>Je m'appelle Amélia Pilou, j'ai 21 ans et ce site a pour vocation de me présenter en tant que personne,en
+                        tant qu'étudiante et candidate à l'obtention du BTS SIO (Service Informatique aux Organisations) et en tant
+                        que future professionelle de l'informatique<p>
+                        <a href="#" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">En savoir plus »</a>
+                </div>
+            </div>
+        </div> <!-- Emplacement pour le contenu principal de la page -->
         <footer>
             <div class="container">
                 <div class="row">
