--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
     <head>
         <!-- Required meta tags -->
         <meta charset="utf-8">
@@ -15,7 +15,6 @@
         <title>Portfolio de Dylan ESCULIER (BTS SIO 2021)</title>
     </head>
     <body>
-        <h1>Hello, world!</h1>
 
         <!-- Optional JavaScript; choose one of the two! -->
 
@@ -44,7 +43,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="cv.html" class="nav-link">
+                            <a href="pages/cv.html" class="nav-link">
                                 <span class="fa fa-id-badge"></span> CV
                             </a>
                         </li>
