--- a/pages/cv.html
+++ b/pages/cv.html
@@ -263,7 +263,8 @@
                 <div class="meContacter">
                     <div class="details float-left">
                         <a href="https://twitter.com/AmeliaPILOU" title="Lien vers la page Twitter de @AmeliaPilou">
-                            <img class="contact-icon" src="../images/cv/twitter-dreamstale71.png" alt="Icone de Twitter">
+                            <img class="contact-icon" src="../images/cv/twitter-dreamstale71.png"
+                                alt="Icone de Twitter">
                             Twitter
                         </a>
                     </div>
@@ -272,7 +273,8 @@
                     <div class="details float-left">
                         <a href="http://fr.linkedin.com/in/ameliaPilou"
                             title="Lien vers le profil LinkedIn de Amélia Pilou">
-                            <img class="contact-icon" src="../images/cv/linkedin-dreamstale45.png" alt="Icone de LinkedIn">
+                            <img class="contact-icon" src="../images/cv/linkedin-dreamstale45.png"
+                                alt="Icone de LinkedIn">
                             LinkedIn
                         </a>
                     </div>
@@ -288,7 +290,8 @@
                 <div class="meContacter">
                     <div class="details float-left">
                         <a href="skype:ameliapilou?userinfo" title="Lien vers le profil Skype d'Amélia Pilou">
-                            <img class="contact-icon" src="../images/cv/skype-dreamstale61.png" alt="Icone de Skype"> Skype
+                            <img class="contact-icon" src="../images/cv/skype-dreamstale61.png" alt="Icone de Skype">
+                            Skype
                         </a>
                     </div>
                 </div>
@@ -300,6 +303,68 @@
                                 alt="Icone de Instagram"> Instagram
                         </a>
                     </div>
+                </div>
+            </div>
+            <div id="langues" class="rubrique clearfix">
+                <h2><span class="fa fa-flag"></span> Langue</h2>
+                <div class="container">
+                    <div class="langue">Français</div>
+                    <div class="niveau">
+                        <span class="badge badge-dark">A1</span>
+                        <span class="badge badge-dark">A2</span>
+                        <span class="badge badge-dark">B1</span>
+                        <span class="badge badge-dark">B2</span>
+                        <span class="badge badge-dark">C1</span>
+                        <span class="badge badge-success">C2</span>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="langue">Anglais</div>
+                    <div class="niveau">
+                        <span class="badge badge-dark">A1</span>
+                        <span class="badge badge-dark">A2</span>
+                        <span class="badge badge-dark">B1</span>
+                        <span class="badge badge-dark">B2</span>
+                        <span class="badge badge-success">C1</span>
+                        <span class="badge badge-dark">C2</span>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="langue">Portugais</div>
+                    <div class="niveau">
+                        <span class="badge badge-dark">A1</span>
+                        <span class="badge badge-dark">A2</span>
+                        <span class="badge badge-dark">B1</span>
+                        <span class="badge badge-dark">B2</span>
+                        <span class="badge badge-success">C1</span>
+                        <span class="badge badge-dark">C2</span>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="langue">Espagnol</div>
+                    <div class="niveau">
+                        <span class="badge badge-dark">A1</span>
+                        <span class="badge badge-dark">A2</span>
+                        <span class="badge badge-success">B1</span>
+                        <span class="badge badge-dark">B2</span>
+                        <span class="badge badge-dark">C1</span>
+                        <span class="badge badge-dark">C2</span>
+                    </div>
+                </div>
+            </div>
+            <div id="competences" class="rubrique clearfix">
+                <h2><span class="fa fa-wrench"></span> Compétences</h2>
+                <div class="container">
+                    <div class="libelle">Intégration web</div>
+                    <div class="classement classement5"></div>
+                </div>
+                <div class="container">
+                    <div class="libelle">Dév. web</div>
+                    <div class="classement classement4"></div>
+                </div>
+                <div class="container">
+                    <div class="libelle">Administration</div>
+                    <div class="classement classement3"></div>
                 </div>
             </div>
         </div>
