Ajout du css dans la rebrique passion
- Ajout du css dans la rebrique passions
- Modifications des informations

--- a/pages/cv.html
+++ b/pages/cv.html
@@ -146,21 +146,21 @@
             <div class="row cadreCV">
                 <div id="cv-entete" class="text-center">
                     <div id="cv-photo">
-                        <img src="../images/AmeliaPilou.jpg" alt="Ma photo d'identité">
+                        <img src="../images/dylan.jpg" alt="Ma photo d'identité">
                     </div>
                     <div id="cv-intro">
-                        <h1>Bonjour, je m'appelle <span>Amélia</span> et voici mon CV</h1>
+                        <h1>Bonjour, je m'appelle <span>Dylan</span> et voici mon CV</h1>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-7">
                     <!-- Partie gauche -->
                     <div class="rubrique clearfix">
                         <h2><span class="fa fa-comment"></span> En quelques mots...</h2>
-                        <p>J'ai 21 ans, j'habite Toulon et je suis passionnée d'informatique et de
+                        <p>J'ai 19 ans, j'habite Toulon et je suis passionnée d'informatique et de
                             nouvelles technologies depuis mon plus jeune âge. Je suis actuellement un
-                            BTS Services Informatiques aux Organisations ce qui m'a décidé à aller au
-                            delà de la passion, afin de faire de l'informatique et plus particulièrement
-                            du développement d'applications, mon métier&nbsp;!
+                            BTS Services Informatiques aux Organisations ce qui ma donner envie de faire ses études
+                            étaient d'en apprendre plus et savoir ce qu'il se passe derrière la partie visible d'un site
+                            ou d'une application.&nbsp;!
                         </p>
                     </div>
                     <div class="rubrique clearfix">
@@ -182,10 +182,9 @@
                                     <span class="fa fa-stop-circle"></span>&nbsp;2020
                                 </div>
                                 <div class="details float-right">
-                                    <h3>Bac STI2D spécialité SIN</h3>
-                                    <p>Baccalauréat "Sciences et Technologies de l'Industrie et du
-                                        Développement Durable" spécialité "Systèmes d’Information et
-                                        Numérique"</p>
+                                    <h3>Bac Générale spécialité NSI et Maths</h3>
+                                    <p>Baccalauréat Générale avec les spécialités "Informatique et Sciences du
+                                        Numérique" et "Mathématiques".</p>
                                 </div>
                             </li>
                             <li>
@@ -203,40 +202,25 @@
                         <h2><span class="fa fa-briefcase"></span> Expériences professionnelles</h2>
                         <div class="experience clearfix">
                             <div class="col-3">
-                                <div class="lieu">Dev'in Love</div>
+                                <div class="lieu">Métropole Toulon Provence Méditerranée</div>
                                 <div class="date">2022 (7 sem.)</div>
                             </div>
                             <div class="col-9">
                                 <div class="profession">Developpement PHP Symfony 5</div>
-                                <div class="details">Création/mise en œuvre de bundles, création de services,
-                                    création de commandes, respect de l'architecture MVC, création de templates
-                                    avec Twig, gestion de la persistance avec Doctrine.
+                                <div class="details">Développement d'une application Web sous Symfony (Plus
+                                    d'informations quand le stage auras eut lieu).
                                 </div>
                             </div>
                         </div>
                         <div class="experience clearfix">
                             <div class="col-3">
-                                <div class="lieu">SCA Info</div>
-                                <div class="date">2021 (6 sem.)</div>
+                                <div class="lieu">COS Méditerranée</div>
+                                <div class="date">2017 (2 sem.)</div>
                             </div>
                             <div class="col-9">
-                                <div class="profession">Développement JEE</div>
-                                <div class="details">Création/mise en oeuvre d'EJB (Entreprise Java Beans),
-                                    persistance des données avec JPA, mise en oeuvre du framework MVC JSF
-                                    (JavaServer Faces), création de composants graphique avec RichFaces.
-                                </div>
-                            </div>
-                        </div>
-                        <div class="experience clearfix">
-                            <div class="col-3">
-                                <div class="lieu">SCA Info</div>
-                                <div class="date">2020<br>(à distance)</div>
-                            </div>
-                            <div class="col-9">
-                                <div class="profession">Intégration avec Boostrap</div>
-                                <div class="details">Création d'un site vitrine pour présenter l'entreprise et
-                                    ses différents projets. Problématique de RWD (Responsive Web Design),
-                                    optimisation des contenus, tests multisupports.
+                                <div class="profession">Observation en entreprise (Stage 3eme)</div>
+                                <div class="details">Observations de plusieurs postes au sein du COS Méditerranée
+                                    notament la partie développement durant la création du nouveau site.
                                 </div>
                             </div>
                         </div>
@@ -248,7 +232,7 @@
                         <h2><span class="fa fa-user"></span> Me contacter</h2>
                         <div class="meContacter">
                             <div class="details float-left">
-                                <a href="mailto:amelia.pilou@gmail.com?subject=Contact depuis le CV en ligne"
+                                <a href="mailto:dylanesculier@gmail.com?subject=Contact depuis le CV en ligne"
                                     title="Mail de Amélia Pilou">
                                     <img class="contact-icon" src="../images/cv/mail-dreamstale47.png"
                                         alt="Icone de mail">
@@ -258,7 +242,7 @@
                         </div>
                         <div class="meContacter">
                             <div class="details float-left">
-                                <a href="https://twitter.com/AmeliaPILOU"
+                                <a href="https://twitter.com/satmyx83"
                                     title="Lien vers la page Twitter de @AmeliaPilou">
                                     <img class="contact-icon" src="../images/cv/twitter-dreamstale71.png"
                                         alt="Icone de Twitter">
@@ -268,7 +252,7 @@
                         </div>
                         <div class="meContacter">
                             <div class="details float-left">
-                                <a href="http://fr.linkedin.com/in/ameliaPilou"
+                                <a href="#"
                                     title="Lien vers le profil LinkedIn de Amélia Pilou">
                                     <img class="contact-icon" src="../images/cv/linkedin-dreamstale45.png"
                                         alt="Icone de LinkedIn">
@@ -278,7 +262,7 @@
                         </div>
                         <div class="meContacter">
                             <div class="details float-left">
-                                <a href="https://github.com/AmeliaPilou/"
+                                <a href="https://github.com/satmyx"
                                     title="Lien vers le profil GitHub d'Amélia Pilou">
                                     <img class="contact-icon" src="../images/cv/github2-dreamstale35.png"
                                         alt="Icone de GitHub">
@@ -288,7 +272,7 @@
                         </div>
                         <div class="meContacter">
                             <div class="details float-left">
-                                <a href="skype:ameliapilou?userinfo" title="Lien vers le profil Skype d'Amélia Pilou">
+                                <a href="#" title="Lien vers le profil Skype d'Amélia Pilou">
                                     <img class="contact-icon" src="../images/cv/skype-dreamstale61.png"
                                         alt="Icone de Skype">
                                     Skype
@@ -297,7 +281,7 @@
                         </div>
                         <div class="meContacter">
                             <div class="details float-left">
-                                <a href="https://instagram.com/AmeliaPilou"
+                                <a href="#"
                                     title="Lien vers le profil Instagram d'Amélia Pilou">
                                     <img class="contact-icon" src="../images/cv/instagram-dreamstale43.png"
                                         alt="Icone de Instagram"> Instagram
@@ -365,6 +349,18 @@
                         <div class="container">
                             <div class="libelle">Administration</div>
                             <div class="classement classement3"></div>
+                        </div>
+                    </div>
+                    <div id="passions" class="rubrique clearfix">
+                        <h2><span class="fa fa-puzzle-piece"></span> Passions</h2>
+                        <div class="container">
+                            <div class="libelle">Badminton</div>
+                        </div>
+                        <div class="container">
+                            <div class="libelle">Jeux Vidéos</div>
+                        </div>
+                        <div class="container">
+                            <div class="libelle">Level Design</div>
                         </div>
                     </div>
                 </div>
