Fix du contact dans la navbar
Fix navbar index et cv

--- a/pages/cv.html
+++ b/pages/cv.html
@@ -132,7 +132,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link"><span class="fa fa-envelope"></span>
+                        <a href="mailto:dylanesculier@gmail.com?subject=Contact depuis le CV en ligne" class="nav-link"><span class="fa fa-envelope"></span>
                             Me contacter
                         </a>
                     </li>
