--- a/index.html
+++ b/index.html
@@ -132,7 +132,8 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link"><span class="fa fa-envelope"></span>
+                        <a href="mailto:dylanesculier@gmail.com?subject=Contact depuis le CV en ligne"
+                            class="nav-link"><span class="fa fa-envelope"></span>
                             Me contacter
                         </a>
                     </li>
@@ -150,7 +151,8 @@
                     tant qu'étudiante et candidate à l'obtention du BTS SIO (Service Informatique aux Organisations)
                     vous trouverez plusieurs informations comme mes compétences ainsi que mes centres d'intérêt
                 <p>
-                    <a href="pages/cv.html" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">En savoir plus
+                    <a href="pages/cv.html" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">En
+                        savoir plus
                         »</a>
             </div>
         </div>
